[package]
name = "rgtube"
version = "0.1.0"
authors = ["toasterrepairman <smol@toast.cyou>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = "0.3.0"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]
