[package]
name = "rgtube"
version = "0.1.0"
authors = ["toasterrepairman <smol@toast.cyou>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ytd-rs = "0.1.4"
futures = { version = "0.3.*" }
tokio = {version = "1.12.0", features = ["full"] }
glib = "0.14.8"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]

